6879902: CTW failure jdk6_18/hotspot/src/cpu/sparc/vm/assembler_sparc.hpp:845

For signatures with a large number of arguments the offset for the float store becomes too big and does not fit in 13-bit.

Reviewed-by: kvn, never